content: update 10 posts with current versions, honest disclaimers, and deeper technical detail